--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Coins">
         <activity
-            android:name=".CoinDetailActivity"
+            android:name=".presentation.CoinDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".CoinPriceListActivity"
+            android:name=".presentation.CoinPriceListActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
