--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,17 @@ activity = "1.10.1"
 constraintlayout = "2.2.1"
 recyclerview = "1.4.0"
 cardview = "1.0.0"
+room_version = "2.6.1"
+ksp_version = "2.0.21-1.0.25"
+gson_version="2.11.0"
+retrofit_version="2.11.0"
+okHttpClient_version="4.12.0"
+viewModel_version="2.8.6"
+liveData_version="2.8.6"
+lifecycle_version="2.8.6"
+reactiveStreams_version="2.8.6"
+picasso_version="2.8"
+work_manager = "2.9.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -23,8 +34,35 @@ androidx-activity = { group = "androidx.activity", name = "activity", version.re
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 androidx-cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview" }
+#Библиотека Room
+room = {group = "androidx.room", name = "room-runtime", version.ref = "room_version"}
+#Кодогенератор
+room-compiler = {group="androidx.room", name = "room-compiler", version.ref ="room_version"}
+#optional - Kotlin Extensions and Coroutines support for Room
+room-ktx = {group = "androidx.room", name = "room-ktx", version.ref = "room_version"}
+#Retrofit
+retrofit = {group = "com.squareup.retrofit2", name = "retrofit", version.ref ="retrofit_version"}
+#конвектор gson
+gson = {group = "com.squareup.retrofit2", name = "converter-gson", version.ref ="gson_version"}
+#Picaso
+picasso = {group = "com.squareup.picasso", name = "picasso", version.ref ="picasso_version"}
+#WorkManager
+work-manager = { group = "androidx.work", name = "work-runtime", version.ref = "work_manager" }
+#ViewModel
+viewModel = {group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref ="viewModel_version"}
+#LiveData
+liveData = {group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref ="liveData_version"}
+#Annotation processor
+liveDataCompiler = {group = "androidx.lifecycle", name = "lifecycle-compiler", version.ref ="lifecycle_version"}
+#optional - ReactiveStreams support for LiveData
+reactiveStreams = {group = "androidx.lifecycle", name = "lifecycle-reactivestreams-ktx", version.ref ="reactiveStreams_version"}
+#OkHttpClient- не обязательна
+okHttpClient = {group = "com.squareup.okhttp3", name = "okhttp", version.ref ="okHttpClient_version"}
+#HttpLoggingInterceptor- не обязательна
+httpLoggingInterceptor = {group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref ="okHttpClient_version"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+ksp = {id = "com.google.devtools.ksp", version.ref ="ksp_version"}
 
